<resources>
    <string name="app_name">Planto-App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="plant_fragment_label">Plants</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="adoption">Adoption date</string>
    <string name="location">Location</string>
    <string name="note">Note</string>

    <!-- drop down plants location -->
    <string name="bedroom">Bed room</string>
    <string name="kitchen">Kitchen</string>
    <string name="living_room">Living room</string>
    <string name="hallway">Hallway</string>
    <string name="balcony">Balcony</string>


    <!-- drop down plants types -->
    <string name="herbs">Herbs   </string>
    <string name="trees">Trees   </string>
    <string name="shrubs">Shrubs</string>
    <string name="climbers">Climbers</string>
    <string name="creepers">Creepers</string>
    <string name="cucumber">Cucumber</string>
    <string name="x">X</string>
    <string name="watering_reminder">Watering Reminder</string>
    <string name="outdoor_reminder">Outdoor Reminder</string>




    <!-- drop down watering schedule -->
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>


</resources>