<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.AddPlantFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp">


                        <ImageView
                            android:id="@+id/iv_camera_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="16dp"
                            android:padding="10dp"
                            android:src="@drawable/photo_camera"
                            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                            app:layout_constraintEnd_toStartOf="@+id/cardView3"
                            app:tint="@color/black" />

                        <ImageView
                            android:id="@+id/iv_gallery_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="10dp"
                            android:padding="10dp"
                            android:src="@drawable/add"
                            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                            app:layout_constraintStart_toEndOf="@+id/cardView3"
                            app:tint="@color/black" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView3"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="250dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/plant_img"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/ic_launcher_round" />

                        </androidx.cardview.widget.CardView>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plant_name_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp"
                    app:layout_constraintHorizontal_bias="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/plant_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:maxLength="40"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plant_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp">

                    <AutoCompleteTextView
                        android:id="@+id/et_plant_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:padding="15dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:hint="@string/type"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/adoption_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp">

                    <AutoCompleteTextView
                        android:id="@+id/et_adoption_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:hint="@string/adoption"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>


                <SeekBar
                    android:id="@+id/seekBarWatering"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp"

                    android:max="10"
                    android:progress="3" />

                <SeekBar
                    android:id="@+id/seekBarLight"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp"
                    android:max="10"
                    android:progress="3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plant_location"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp">

                    <AutoCompleteTextView
                        android:id="@+id/et_plant_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:hint="@string/location"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plant_note_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="34dp"
                    app:layout_constraintHorizontal_bias="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/plant_note_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="15dp"
                        android:hint="@string/note"
                        android:maxLength="100"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>





</RelativeLayout>